[project]
name = "elbacsv"
version = "0.1.1"
description = "Takes CSV files from the ELBA electronic banking application and brings it into first normal form"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
authors = [
  { name="Dominik Rappaport", email="dominik@rappaport.at" },
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/dominikrappaport/elbacsv"
Issues = "https://github.com/dominikrappaport/elbacsv/issues"

[project.scripts]
elbacsv = "elbacsv.cli:main"

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
